o) Add Client SSL Support
o) Add user shedding
o) Add new channel modes:
o) +R - Cannot join channel unless regisitered with NickServ
o) +M - Cannot talk on channel unless registered with NickServ
o) +S - Cannot join channel unless using SSL

-- ircd-hybrid-8.0.0 Release Notes
o) Fixed an off-by-one with spoofs. Spoofs are now also checked for
   invalid characters.

-- ircd-hybrid-8rc1 Release Notes
o) Removed general::client_flood configuration option and added the
   new 'recvq' configuration directive to class{} blocks.
   The max size of a receive queue can be seen in "STATS Y"
   for each class
o) A server's description can again include the '[' and ']' characters


-- ircd-hybrid-8beta3 Release Notes
o) Fixed wrong syntax of several language files
o) &localchannels have been removed
o) /messaging opers@some.server is no longer supported
o) Fixed bug that would possibly lead to a topic desynchronization
o) Removed serverhide::disable_hidden configuration option
o) Dropped ircd-hybrid-6 GLINE compatibility mode
o) use_invex, use_except and use_knock configuration options
   have been removed. These features are now enabled by default

-- ircd-hybrid-8beta2 Release Notes
o) channel::disable_fake_channels now also disables ascii 29 (mIRC italic)
   when set to yes
o) Added channel::max_chans_per_oper configuration directive. The old way
   was to let ircops join three times the amount of max_chans_per_user
o) Replaced MODLOAD, MODUNLOAD, MODRELOAD, MODLIST and MODRESTART commands
   with the new MODULE command which can be fed with the LOAD, UNLOAD, RELOAD
   and LIST parameters.
   MODRESTART has been entirely removed. Use "MODULE RELOAD *" to reload all modules
o) Added back server notice when a client tries to obtain a reserved nick name
o) Removed OMOTD module
o) Added 'set' to operator privilege flags. Gives access to the "SET" command
o) Improved TS6 support


-- ircd-hybrid-8beta1 Release Notes