@@ -902,11 +902,6 @@ general {
 	invisible_on_connect = yes;
 
 	/*
-	 * Show "actually using host <ip>" on /whois when possible.
-	 */
-	use_whois_actually = yes;
-
-	/*
 	 * Max time from the nickname change that still causes KILL
 	 * automatically to switch for the current nick of that user.
 	 */
