@@ -108,6 +108,9 @@ o) +S - Cannot join channel unless using SSL
 -- ircd-hybrid-8.0.0 Release Notes
 o) Fixed an off-by-one with spoofs. Spoofs are now also checked for
    invalid characters.
+o) Removed general::use_whois_actually configuration directive. This is
+   now enabled by default
+
 
 -- ircd-hybrid-8rc1 Release Notes
 o) Removed general::client_flood configuration option and added the
